--- a/index.html
+++ b/index.html
@@ -500,13 +500,112 @@
 
     <!-- Projects Section -->
     <section id="projects" class="hidden">
-        <h2 class="section-title hyper-text">CASE FILES</h2>
-        <div class="projects-grid">
-             <div class="project-card"><div class="project-card-inner"><div class="project-card-front"><div class="folder-icon">📁</div><div class="project-id">CASE #001</div><div class="project-hint">Forensic Analyzer</div></div><div class="project-card-back"><span class="project-date">Nov 2025</span><h3 class="project-title">Forensic Analyzer</h3><p class="project-desc">Web-based Digital Forensic Learning Tool with hashing features.</p><div class="project-tech">PYTHON // WEB</div></div></div></div>
-             <div class="project-card"><div class="project-card-inner"><div class="project-card-front"><div class="folder-icon">📂</div><div class="project-id">CASE #002</div><div class="project-hint">Security Multi-Tool</div></div><div class="project-card-back"><span class="project-date">Aug 2025</span><h3 class="project-title">Multi-Tool Launcher</h3><p class="project-desc">GUI platform for VAPT and Network Scanning automation.</p><div class="project-tech">GUI // AUTOMATION</div></div></div></div>
-             <div class="project-card"><div class="project-card-inner"><div class="project-card-front"><div class="folder-icon">🗂</div><div class="project-id">CASE #003</div><div class="project-hint">Phishing Detector</div></div><div class="project-card-back"><span class="project-date">June 2025</span><h3 class="project-title">AI Phishing Detector</h3><p class="project-desc">AI-based email analysis for malicious patterns.</p><div class="project-tech">AI // EMAIL SEC</div></div></div></div>
+    <h2 class="section-title hyper-text">PROJECTS</h2>
+
+    <div class="projects-grid">
+
+        <!-- PROJECT 1 -->
+        <div class="project-card">
+            <div class="project-card-inner">
+
+                <div class="project-card-front">
+                    <img src="project1.png" alt="Forensic Analyzer" style="width:70px;height:70px;object-fit:contain;margin-bottom:10px;">
+                    <h3 style="color:#fff;font-weight:bold;font-size:16px;margin-bottom:6px;">
+                        Forensic Analyzer
+                    </h3>
+                    <p style="font-size:13px;line-height:1.4;opacity:0.85;margin-bottom:10px;">
+                        Web-based Digital Forensic Learning Tool implementing hashing and encoding techniques.
+                    </p>
+                    <a
+                        href="https://github.com/isayani-78/forensic-analyzer"
+                        target="_blank"
+                        style="font-size:12px;text-decoration:none;border:1px solid currentColor;padding:4px 10px;color:#fff;"
+                    >
+                        View on GitHub
+                    </a>
+                </div>
+
+                <div class="project-card-back">
+                    <span class="project-date">Nov 2025 - Present</span>
+                    <h3 class="project-title">Forensic Analyzer.</h3>
+                    <p class="project-desc">
+                        A web-based Digital Forensic Learning Tool. Implemented basic hashing and encoding features for educational analysis. (Academic Project)
+                    </p>
+                    <div class="project-tech">PYTHON // WEB // HASHING</div>
+                </div>
+
+            </div>
         </div>
-    </section>
+
+        <!-- PROJECT 2 -->
+        <div class="project-card">
+            <div class="project-card-inner">
+
+                <div class="project-card-front">
+                    <img src="project2.png" alt="Cyber Security Multi-Tool" style="width:70px;height:70px;object-fit:contain;margin-bottom:10px;">
+                    <h3 style="color:#fff;font-weight:bold;font-size:16px;margin-bottom:6px;">
+                        Cyber Security Multi-Tool Launcher (CMTL).
+                    </h3>
+                    <p style="font-size:13px;line-height:1.4;opacity:0.85;margin-bottom:10px;">
+                        GUI platform for VAPT, Pen Testing, and Network Scanning.
+                    </p>
+                    <a
+                        href="https://github.com/isayani-78/CMTL"
+                        target="_blank"
+                        style="font-size:12px;text-decoration:none;border:1px solid currentColor;padding:4px 10px;color:#fff;"
+                    >
+                        View on GitHub
+                    </a>
+                </div>
+
+                <div class="project-card-back">
+                    <span class="project-date">Aug 2025 - Present</span>
+                    <h3 class="project-title">Cyber Security Multi-Tool Launcher</h3>
+                    <p class="project-desc">
+                        GUI platform for VAPT, Pen Testing, and Network Scanning. A one-click interface to streamline tasks for efficiency. (Academic Project)
+                    </p>
+                    <div class="project-tech">GUI // VAPT // AUTOMATION</div>
+                </div>
+
+            </div>
+        </div>
+
+        <!-- PROJECT 3 -->
+        <div class="project-card">
+            <div class="project-card-inner">
+
+                <div class="project-card-front">
+                    <img src="project3.png" alt="AI Phishing Detector" style="width:70px;height:70px;object-fit:contain;margin-bottom:10px;">
+                    <h3 style="color:#fff;font-weight:bold;font-size:16px;margin-bottom:6px;">
+                        AI-Powered Phishing Email Detector.
+                    </h3>
+                    <p style="font-size:13px;line-height:1.4;opacity:0.85;margin-bottom:10px;">
+                        Detects phishing emails using AI analysis of headers and content.
+                    </p>
+                    <a
+                        href="https://github.com/isayani-78/AI-Powered-Phishing-Email-Detector"
+                        target="_blank"
+                        style="font-size:12px;text-decoration:none;border:1px solid currentColor;padding:4px 10px;color:#fff;"
+                    >
+                        View on GitHub
+                    </a>
+                </div>
+
+                <div class="project-card-back">
+                    <span class="project-date">June 2025 - Present</span>
+                    <h3 class="project-title">AI-Powered Phishing Email Detector</h3>
+                    <p class="project-desc">
+                        Detects phishing emails using AI-based analysis of headers and content to identify malicious patterns.
+                    </p>
+                    <div class="project-tech">AI // EMAIL SEC // THREAT INTEL</div>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+</section>
+
 
     <!-- Credentials Section -->
     <section id="credentials" class="hidden">
@@ -874,6 +973,7 @@
 </body>
 
 </html>
+
 
 
 
