--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                         target="_blank"
                         style="font-size:12px;text-decoration:none;border:1px solid currentColor;padding:4px 10px;color:#fff;"
                     >
-                        View on GitHub
+                        Click & View on GitHub
                     </a>
                 </div>
 
@@ -555,7 +555,7 @@
                         target="_blank"
                         style="font-size:12px;text-decoration:none;border:1px solid currentColor;padding:4px 10px;color:#fff;"
                     >
-                        View on GitHub
+                       Click & View on GitHub
                     </a>
                 </div>
 
@@ -589,7 +589,7 @@
                         target="_blank"
                         style="font-size:12px;text-decoration:none;border:1px solid currentColor;padding:4px 10px;color:#fff;"
                     >
-                        View on GitHub
+                        Click & View on GitHub
                     </a>
                 </div>
 
@@ -986,6 +986,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
