--- a/index.html
+++ b/index.html
@@ -485,9 +485,30 @@
         <h2 class="section-title hyper-text">THE ARSENAL</h2>
         <div class="carousel-wrapper">
             <div class="carousel-track">
-                <div class="carousel-item">WIRESHARK</div> <div class="carousel-item">NMAP</div> <div class="carousel-item">BURP SUITE</div> <div class="carousel-item">METASPLOIT</div> <div class="carousel-item">PYTHON</div> <div class="carousel-item">AUTOPSY</div> <div class="carousel-item">MAGNET AXIOM</div> <div class="carousel-item">LINUX</div> <div class="carousel-item">OPENVAS</div> <div class="carousel-item">VAPT</div> <div class="carousel-item">CRYPTOGRAPHY</div>
-                <div class="carousel-item">WIRESHARK</div> <div class="carousel-item">NMAP</div> <div class="carousel-item">BURP SUITE</div> <div class="carousel-item">METASPLOIT</div> <div class="carousel-item">PYTHON</div> <div class="carousel-item">AUTOPSY</div> <div class="carousel-item">MAGNET AXIOM</div> <div class="carousel-item">LINUX</div> <div class="carousel-item">OPENVAS</div> <div class="carousel-item">VAPT</div> <div class="carousel-item">CRYPTOGRAPHY</div>
-            </div>
+    <div class="carousel-item">WIRESHARK</div>
+    <div class="carousel-item">FTK IMAGER</div>
+    <div class="carousel-item">EASEUS DATA RECOVERY</div>
+    <div class="carousel-item">METASPLOIT</div>
+    <div class="carousel-item">PYTHON</div>
+    <div class="carousel-item">AUTOPSY</div>
+    <div class="carousel-item">MAGNET AXIOM</div>
+    <div class="carousel-item">LINUX</div>
+    <div class="carousel-item">OPENVAS</div>
+    <div class="carousel-item">OXYGEN FORENSIC</div>
+    <div class="carousel-item">CRYPTOGRAPHY</div>
+    <div class="carousel-item">ZAP</div>
+    <div class="carousel-item">NMAP</div>
+    <div class="carousel-item">BURP SUITE</div>
+    <div class="carousel-item">METASPLOIT</div>
+    <div class="carousel-item">BASH SCRIPTING</div>
+    <div class="carousel-item">SHELL SCRIPTING</div>
+    <div class="carousel-item">MAGNET AXIOM</div>
+    <div class="carousel-item">LINUX</div>
+    <div class="carousel-item">UBUNTU</div>
+    <div class="carousel-item">CELLEBRITE</div>
+    <div class="carousel-item">CRYPTOGRAPHY</div>
+</div>
+
         </div>
         <div class="skills-container">
             <div class="skill-category"><h3>// FORENSICS</h3><div class="skill-tags"><span class="tag">Magnet Axiom</span><span class="tag">Autopsy</span><span class="tag">FTK Imager</span><span class="tag">Mobile Forensics</span></div></div>
@@ -986,6 +1007,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
