--- a/index.html
+++ b/index.html
@@ -479,16 +479,45 @@
             </div>
         </div>
     </section>
+    <!-- Skills Section -->
+    <section id="skills" class="hidden">
+        <h2 class="section-title hyper-text">THE ARSENAL</h2>
+        <div class="carousel-wrapper">
+            <div class="carousel-track">
+                <div class="carousel-item">WIRESHARK</div>
+                <div class="carousel-item">FTK IMAGER</div>
+                <div class="carousel-item">EASEUS DATA RECOVERY</div>
+                <div class="carousel-item">METASPLOIT</div>
+                <div class="carousel-item">PYTHON</div>
+                <div class="carousel-item">AUTOPSY</div>
+                <div class="carousel-item">MAGNET AXIOM</div>
+                <div class="carousel-item">LINUX</div>
+                <div class="carousel-item">OPENVAS</div>
+                <div class="carousel-item">OXYGEN FORENSIC</div>
+                <div class="carousel-item">CRYPTOGRAPHY</div>
+                <div class="carousel-item">ZAP</div>
+                <div class="carousel-item">NMAP</div>
+                <div class="carousel-item">BURP SUITE</div>
+                <div class="carousel-item">METASPLOIT</div>
+                <div class="carousel-item">BASH SCRIPTING</div>
+                <div class="carousel-item">SHELL SCRIPTING</div>
+                <div class="carousel-item">MAGNET AXIOM</div>
+                <div class="carousel-item">LINUX</div>
+                <div class="carousel-item">UBUNTU</div>
+                <div class="carousel-item">CELLEBRITE</div>
+                <div class="carousel-item">CRYPTOGRAPHY</div>
+            </div>
+         </div>
 
-   <div class="skills-container">
-    <div class="skill-category"><h3>// LANGUAGES & SCRIPTING</h3><div class="skill-tags"><span class="tag">Python</span><span class="tag">Matplotlib</span><span class="tag">Bash</span><span class="tag">Shell Scripting</span><span class="tag">HTML</span><span class="tag">NumPy</span></div></div>
-    <div class="skill-category"><h3>// SECURITY & PENTESTING</h3><div class="skill-tags"><span class="tag">VAPT</span><span class="tag">WAPT</span><span class="tag">Threat Management</span><span class="tag">Burp</span><span class="tag">Nmap</span><span class="tag">Internet Security</span><span class="tag">Network Security</span></div></div>
-    <div class="skill-category"><h3>// FORENSIC & OSINT</h3><div class="skill-tags"><span class="tag">Digital Forensic</span><span class="tag">Computer Forensic</span><span class="tag">Mobile Forensic</span><span class="tag">Network Forensic</span><span class="tag">Social Engineering</span><span class="tag">Information Gathering</span><span class="tag">Blue Team</span></div></div>
-    <div class="skill-category"><h3>// OPERATING SYSTEMS</h3><div class="skill-tags"><span class="tag">Unix</span><span class="tag">GNU/Linux</span><span class="tag">Ubuntu</span><span class="tag">Kali Linux</span><span class="tag">Black Arch</span><span class="tag">Parrot</span><span class="tag">Windows</span></div></div>
-    <div class="skill-category"><h3>// TOOLS</h3><div class="skill-tags"><span class="tag">Nmap</span><span class="tag">Autopsy</span><span class="tag">SPF (Smartphone Forensic)</span><span class="tag">Magnet AXIOM</span><span class="tag">FTK Imager</span><span class="tag">ZAP</span><span class="tag">Wireshark</span><span class="tag">WhatWeb / Wappalyzer</span><span class="tag">OpenVAS</span><span class="tag">Nessus</span><span class="tag">Nikto</span><span class="tag">Netcat</span><span class="tag">Telnet</span><span class="tag">Netdiscover</span><span class="tag">Angry IP Scanner</span><span class="tag">Advanced IP Scanner</span><span class="tag">And Many More</span></div></div>
-    <div class="skill-category"><h3>// AI & MACHINE LEARNING</h3><div class="skill-tags"><span class="tag">AI Prompting</span><span class="tag">Machine Learning (ML)</span></div></div>
-    <div class="skill-category"><h3>// DATA PROTECTION & INFO HIDING</h3><div class="skill-tags"><span class="tag">Cryptography</span><span class="tag">Steganography</span><span class="tag">Steganalysis</span><span class="tag">Obfuscation</span><span class="tag">Encoding</span><span class="tag">Decoding</span><span class="tag">Quantum Cryptography</span><span class="tag">Format-Preserving Encryption (FPE)</span></div></div>
-</div>
+  <div class="skills-container">
+            <div class="skill-category"><h3>// LANGUAGES & SCRIPTING</h3><div class="skill-tags"><span class="tag">Python</span><span class="tag">Matplotlib</span><span class="tag">Bash</span><span class="tag">Shell Scripting</span><span class="tag">HTML</span><span class="tag">NumPy</span></div></div>
+            <div class="skill-category"><h3>// SECURITY & PENTESTING</h3><div class="skill-tags"><span class="tag">VAPT</span><span class="tag">WAPT</span><span class="tag">Threat Management</span><span class="tag">Burp</span><span class="tag">Nmap</span><span class="tag">Internet Security</span><span class="tag">Network Security</span></div></div>
+            <div class="skill-category"><h3>// FORENSIC & OSINT</h3><div class="skill-tags"><span class="tag">Digital Forensic</span><span class="tag">Computer Forensic</span><span class="tag">Mobile Forensic</span><span class="tag">Network Forensic</span><span class="tag">Information Gathering</span><span class="tag">Blue Teaming</span></div></div>
+            <div class="skill-category"><h3>// OPERATING SYSTEMS</h3><div class="skill-tags"><span class="tag">Unix</span><span class="tag">GNU/Linux</span><span class="tag">Ubuntu</span><span class="tag">Kali Linux</span><span class="tag">Black Arch</span><span class="tag">Parrot</span><span class="tag">Windows</span></div></div>
+            <div class="skill-category"><h3>// TOOLS</h3><div class="skill-tags"><span class="tag">Nmap</span><span class="tag">Autopsy</span><span class="tag">Magnet AXIOM</span><<span class="tag">FTK Imager</span><span class="tag">ZAP</span><span class="tag">Wireshark</span><span class="tag">WhatWeb / Wappalyzer</span><span class="tag">OpenVAS</span><span class="tag">Nessus</span><span class="tag">Nikto</span><span class="tag">Netcat</span><span class="tag">Telnet</span><span class="tag">Netdiscover</span><span class="tag">Angry IP Scanner</span><span class="tag">Advanced IP Scanner</span><span class="tag">And Many More</span>/div></div>
+            <div class="skill-category"><h3>// AI & MACHINE LEARNING</h3><div class="skill-tags"><span class="tag">AI Prompting</span><span class="tag">Machine Learning (ML)</span><span class="tag">Deep Learning</span><span class="tag">Agentic AI</span><span class="tag">NLP</span><span class="tag">Recommender Systems</span></div></div>
+            <div class="skill-category"><h3>// DATA PROTECTION & INFO HIDING</h3><div class="skill-tags"><span class="tag">Cryptography</span><span class="tag">Steganography</span><span class="tag">Steganalysis</span><span class="tag">Obfuscation</span><span class="tag">Encoding</span><span class="tag">Decoding</span><span class="tag">Quantum Cryptography</span></div></div>
+        </div>
 </section>
 
 
@@ -981,6 +1010,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
