--- a/index.html
+++ b/index.html
@@ -705,6 +705,14 @@
         </div>
 
         <div class="timeline-item">
+            <span class="timeline-date">Ongoing</span>
+            <h3 class="timeline-title">
+                CEHV13 AI Master (Certified Ethical Hacker Master)
+            </h3>
+            <span class="timeline-sub">in Progress</span>
+        </div>
+
+        <div class="timeline-item">
             <span class="timeline-date">2015 - 2023</span>
             <h3 class="timeline-title">ICSE & ISC (with pure science)</h3>
             <span class="timeline-sub">St. Thomas' High School, Howrah, West Bengal.</span>
@@ -1011,6 +1019,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
