--- a/index.html
+++ b/index.html
@@ -696,18 +696,20 @@
             <span class="timeline-sub">EC-Council.</span>
         </div>
 
-        <div class="timeline-item">
-            <span class="timeline-date">Ongoing</span>
-            <h3 class="timeline-title">
-                CHFI (Computer Hacking Forensic Investigator)
-            </h3>
-            <span class="timeline-sub">in Progress</span>
-        </div>
 
         <div class="timeline-item">
             <span class="timeline-date">Ongoing</span>
             <h3 class="timeline-title">
-                CEHV13 AI Master (Certified Ethical Hacker Master)
+                CEH V13ai Master (Certified Ethical Hacker Master)
+            </h3>
+            <span class="timeline-sub">in Progress</span>
+        </div>
+
+        
+        <div class="timeline-item">
+            <span class="timeline-date">Ongoing</span>
+            <h3 class="timeline-title">
+                CHFI (Computer Hacking Forensic Investigator)
             </h3>
             <span class="timeline-sub">in Progress</span>
         </div>
@@ -1019,6 +1021,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
