--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
         <div class="glitch-wrapper">
             <h1 class="glitch" data-text="SAYANI MAITY">SAYANI MAITY</h1>
         </div>
-        <p>Digital Forensics Analyst | CEH V13ai Certified | Cyber Sleuth</p>
+        <p> CEH V13ai Certified | Digital Forensics Analyst | Penetration Tester </p>
         <div class="hero-btns">
             <a href="#contact" class="cta-btn">INITIALIZE CONTACT</a>
             <a href="https://github.com/isayani-78/sayanimaity78/blob/main/Sayani%20Maity%20Resume.pdf" target="_blank" class="cta-btn download-btn">DOWNLOAD RESUME</a>
@@ -453,9 +453,10 @@
             <div class="about-text">
                 <p><strong>Identity:</strong> Sayani Maity<br><strong>Location:</strong> Howrah, West Bengal, India<br><strong>Role:</strong> B.Sc. Digital Forensics Student</p>
                 <p>
-                    I am an aspiring Digital Forensics & Cybersecurity Intern with a passion for ethical hacking and investigation. 
-                    Armed with hands-on experience in forensic tools and Python scripting, I dig deep into data to uncover the truth.
-                    Currently pursuing my B.Sc., I am eager to apply my analytical skills to real-world security challenges.
+                    I am Sayani Maity, currently pursuing a B.Sc. in Digital Forensics (2023–2026) at the Indian School of Ethical Hacking (ISOEH), Kolkata, under Maulana Abul Kalam Azad University of Technology (MAKAUT), West Bengal, India.
+I specialize in Digital Forensics, Penetration Testing, OSINT, and cybersecurity tooling, and I am a CEH-trained student currently completing the CHFI syllabus.
+I actively engage in CTF challenges, hands-on security research, and AI-assisted detection projects, with a focus on automation and threat analysis.
+My technical skill set includes Python, Bash, Shell Scripting, VAPT, WAPT, Nmap, Burp Suite, Autopsy, and OSINT research, and I am passionate about continuous learning, applying cybersecurity knowledge to real-world problems, and contributing to a safer digital ecosystem.
                 </p>
                 <p style="color: var(--accent-primary); font-family: var(--font-mono);">>_ Ready to deploy remotely or on-site.</p>
             </div>
@@ -470,10 +471,10 @@
                 </div>
                 <div class="stat-card">
                     <span class="stat-number">ISOEH</span>
-                    <span class="stat-label">Trained</span>
+                    <span class="stat-label">Student</span>
                 </div>
                 <div class="stat-card">
-                    <span class="stat-number">10+</span>
+                    <span class="stat-number">20+</span>
                     <span class="stat-label">Tools Mastered</span>
                 </div>
             </div>
@@ -1021,6 +1022,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
