--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
     </div>
 
     <nav>
-        <div class="logo">&lt;SM_SEC /&gt;</div>
+       <div class="logo">&lt;whoami /&gt; sayani</div>
         <div class="hamburger" onclick="toggleMenu()">
             <div class="bar"></div>
             <div class="bar"></div>
@@ -1022,6 +1022,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
