--- a/index.html
+++ b/index.html
@@ -451,8 +451,10 @@
 
         <div class="about-grid">
             <div class="about-text">
-                <p><strong>Identity:</strong> Sayani Maity<br><strong>Location:</strong> Howrah, West Bengal, India<br><strong>Role:</strong> B.Sc. Digital Forensics Student</p>
-                <p>
+                <p> <strong>Identity:</strong> Sayani Maity<br>
+  <strong>Role:</strong> B.Sc. Digital Forensics Student
+</p>
+
                     I am Sayani Maity, currently pursuing a B.Sc. in Digital Forensics (2023–2026) at the Indian School of Ethical Hacking (ISOEH), Kolkata, under Maulana Abul Kalam Azad University of Technology (MAKAUT), West Bengal, India.
 I specialize in Digital Forensics, Penetration Testing, OSINT, and cybersecurity tooling, and I am a CEH-trained student currently completing the CHFI syllabus.
 I actively engage in CTF challenges, hands-on security research, and AI-assisted detection projects, with a focus on automation and threat analysis.
@@ -1022,6 +1024,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
