--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
         <div class="glitch-wrapper">
             <h1 class="glitch" data-text="SAYANI MAITY">SAYANI MAITY</h1>
         </div>
-        <p> CEH V13ai Certified | Digital Forensics Analyst | Penetration Tester </p>
+        <p> CEH V13ai Certified || Digital Forensics Analyst || Penetration Tester </p>
         <div class="hero-btns">
             <a href="#contact" class="cta-btn">INITIALIZE CONTACT</a>
             <a href="https://github.com/isayani-78/sayanimaity78/blob/main/Sayani%20Maity%20Resume.pdf" target="_blank" class="cta-btn download-btn">DOWNLOAD RESUME</a>
@@ -1024,6 +1024,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
