--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
         <p> CEH V13ai Certified || Digital Forensics Analyst || Penetration Tester </p>
         <div class="hero-btns">
             <a href="#contact" class="cta-btn">INITIALIZE CONTACT</a>
-            <a href="https://github.com/isayani-78/sayanimaity78/blob/main/Sayani%20Maity%20Resume.pdf" target="_blank" class="cta-btn download-btn">DOWNLOAD RESUME</a>
+            <a href="https://github.com/isayani-78/sayanimaity78/raw/main/Sayani%20Maity%20Resume.pdf" class="cta-btn download-btn">DOWNLOAD RESUME</a>
         </div>
     </header>
 
@@ -1024,6 +1024,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
