--- a/index.html
+++ b/index.html
@@ -745,6 +745,12 @@ My technical skill set includes Python, Bash, Shell Scripting, VAPT, WAPT, Nmap,
                 <div class="thm-item" style="transform: rotateY(332.4deg) translateZ(400px);"><img src="https://assets.tryhackme.com/img/badges/advent-of-cyber-2025.png" alt="AoC 2025"></div>
             </div>
         </div>
+        <div class="cert-display-case">
+    <div class="cert-display-header">TryHackMe Profile</div>
+    <img src="https://raw.githubusercontent.com/isayani-78/sayanimaity78/main/assets/Tryhackme.jpg"
+         alt="TryHackMe Profile"
+         class="cert-display-img">
+</div>
     </section>
 
     <section id="contact" class="hidden">
@@ -1024,6 +1030,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
