--- a/index.html
+++ b/index.html
@@ -459,6 +459,9 @@
 I specialize in Digital Forensics, Penetration Testing, OSINT, and cybersecurity tooling, and I am a CEH-trained student currently completing the CHFI syllabus.
 I actively engage in CTF challenges, hands-on security research, and AI-assisted detection projects, with a focus on automation and threat analysis.
 My technical skill set includes Python, Bash, Shell Scripting, VAPT, WAPT, Nmap, Burp Suite, Autopsy, and OSINT research, and I am passionate about continuous learning, applying cybersecurity knowledge to real-world problems, and contributing to a safer digital ecosystem.
+                </p>
+                <p style="color: var(--accent-primary); font-family: var(--font-mono);">>_ Investigating. Exploiting. Securing.</p>
+            </div>
             <div class="stats-container">
                 <div class="stat-card">
                     <img src="https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Sayani%20CEH%20badge.jpg" alt="CEH Badge" class="ceh-badge-img">
@@ -1027,6 +1030,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
