--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@ My technical skill set includes Python, Bash, Shell Scripting, VAPT, WAPT, Nmap,
             </div>
         </div>
         <div class="cert-display-case">
-    <div class="cert-display-header">TryHackMe Profile</div>
+    <div class="cert-display-header">TryHackMe Profile : Top 5%</div>
     <img src="https://raw.githubusercontent.com/isayani-78/sayanimaity78/main/assets/Tryhackme.jpg"
          alt="TryHackMe Profile"
          class="cert-display-img">
@@ -1030,6 +1030,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
