--- a/index.html
+++ b/index.html
@@ -455,10 +455,11 @@
   <strong>Role:</strong> B.Sc. Digital Forensics Student
 </p>
 
-                    I am Sayani Maity, currently pursuing a B.Sc. in Digital Forensics (2023–2026) at the Indian School of Ethical Hacking (ISOEH), Kolkata, under Maulana Abul Kalam Azad University of Technology (MAKAUT), West Bengal, India.
-I specialize in Digital Forensics, Penetration Testing, OSINT, and cybersecurity tooling, and I am a CEH-trained student currently completing the CHFI syllabus.
-I actively engage in CTF challenges, hands-on security research, and AI-assisted detection projects, with a focus on automation and threat analysis.
-My technical skill set includes Python, Bash, Shell Scripting, VAPT, WAPT, Nmap, Burp Suite, Autopsy, and OSINT research, and I am passionate about continuous learning, applying cybersecurity knowledge to real-world problems, and contributing to a safer digital ecosystem.
+                    <p>I am Sayani Maity, currently pursuing a <strong>B.Sc. in Digital Forensics (2023–2026)</strong> at the <strong>Indian School of Ethical Hacking (ISOEH), Kolkata,</strong> under <strong>Maulana Abul Kalam Azad University of Technology (MAKAUT), West Bengal, India</strong>.</p>
+                    <p>I specialize in <strong>Digital Forensics, Penetration Testing, OSINT, and cybersecurity tooling</strong>.
+                    <p>I am a <strong>CEH V13ai Certified</strong>, currently completing the <strong>CHFI syllabus</strong>.</p>
+                   <p>I actively engage in <strong>CTF challenges, hands-on security research, and AI-assisted detection projects</strong>, with a focus on <strong>automation and threat analysis</strong>.</p>
+                    <p>My technical skill set includes<strong> Python, Bash, Shell Scripting, VAPT, WAPT, Nmap, Burp Suite, Autopsy, and OSINT research</strong>, and I am passionate about <strong>continuous learning, applying cybersecurity knowledge to real-world problems</strong>, and contributing to a safer digital ecosystem.</p>
                 </p>
                 <p style="color: var(--accent-primary); font-family: var(--font-mono);">>_ Investigating. Exploiting. Securing.</p>
             </div>
@@ -1030,6 +1031,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
