--- a/index.html
+++ b/index.html
@@ -455,11 +455,12 @@
   <strong>Role:</strong> B.Sc. Digital Forensics Student
 </p>
 
-                    <p>I am Sayani Maity, currently pursuing a <strong>B.Sc. in Digital Forensics (2023–2026)</strong> at the <strong>Indian School of Ethical Hacking (ISOEH), Kolkata,</strong> under <strong>Maulana Abul Kalam Azad University of Technology (MAKAUT), West Bengal, India</strong>.</p>
-                    <p>I specialize in <strong>Digital Forensics, Penetration Testing, OSINT, and cybersecurity tooling</strong>.
-                    <p>I am a <strong>CEH V13ai Certified</strong>, currently completing the <strong>CHFI syllabus</strong>.</p>
+                   <p>I am <strong>Sayani Maity</strong>, currently pursuing a <strong>B.Sc. in Digital Forensics (2023–2026)</strong> at the <strong>Indian School of Ethical Hacking (ISOEH), Kolkata,</strong> under <strong>Maulana Abul Kalam Azad University of Technology (MAKAUT), West Bengal, India</strong>.</p>
+                   <p>I specialize in <strong>Digital Forensics, Penetration Testing, OSINT, and cybersecurity tooling</strong>.
+                   <p>I am a <strong>CEH V13ai Certified</strong>.</p>
                    <p>I actively engage in <strong>CTF challenges, hands-on security research, and AI-assisted detection projects</strong>, with a focus on <strong>automation and threat analysis</strong>.</p>
-                    <p>My technical skill set includes<strong> Python, Bash, Shell Scripting, VAPT, WAPT, Nmap, Burp Suite, Autopsy, and OSINT research</strong>, and I am passionate about <strong>continuous learning, applying cybersecurity knowledge to real-world problems</strong>, and contributing to a safer digital ecosystem.</p>
+                   <p>My technical skill set includes<strong> Python, Bash, Shell Scripting, VAPT, WAPT, Nmap, Burp Suite, Autopsy, and OSINT research</strong>.
+                   <p>I am passionate about <strong>continuous learning, applying cybersecurity knowledge to real-world problems</strong>, and contributing to a safer digital ecosystem.</p>
                 </p>
                 <p style="color: var(--accent-primary); font-family: var(--font-mono);">>_ Investigating. Exploiting. Securing.</p>
             </div>
@@ -1031,6 +1032,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
