--- a/index.html
+++ b/index.html
@@ -455,12 +455,14 @@
   <strong>Role:</strong> B.Sc. Digital Forensics Student
 </p>
 
-                   <p>I am <strong>Sayani Maity</strong>, currently pursuing a <strong>B.Sc. in Digital Forensics (2023–2026)</strong> at the <strong>Indian School of Ethical Hacking (ISOEH), Kolkata,</strong> under <strong>Maulana Abul Kalam Azad University of Technology (MAKAUT), West Bengal, India</strong>.</p>
-                   <p>I specialize in <strong>Digital Forensics, Penetration Testing, OSINT, and cybersecurity tooling</strong>.
-                   <p>I am a <strong>CEH V13ai Certified</strong>.</p>
-                   <p>I actively engage in <strong>CTF challenges, hands-on security research, and AI-assisted detection projects</strong>, with a focus on <strong>automation and threat analysis</strong>.</p>
-                   <p>My technical skill set includes<strong> Python, Bash, Shell Scripting, VAPT, WAPT, Nmap, Burp Suite, Autopsy, and OSINT research</strong>.
-                   <p>I am passionate about <strong>continuous learning, applying cybersecurity knowledge to real-world problems</strong>, and contributing to a safer digital ecosystem.</p>
+                  <p>I am <strong>Sayani Maity</strong>, currently pursuing a <strong>B.Sc. in Digital Forensics (2023–2026)</strong> at <strong>Indian School of Ethical Hacking (ISOEH), Kolkata,</strong>under<strong>Maulana Abul Kalam Azad University of Technology (MAKAUT), West Bengal, India</strong>.</p>
+                  <p>As a <strong>CEH v13ai Certified professional</strong>, I specialize in bridging the gap between theoretical security and real-world defense.</p>
+                  <p>I specialize in <strong>Digital Forensics, Penetration Testing, OSINT, and cybersecurity tooling</strong>.</p>
+                  <p>My expertise lies in <strong>Penetration Testing (WAPT/VAPT), OSINT research</strong>, and the development of <strong>AI-assisted detection tools</strong>.</p>
+                  <p>I am proficient in <strong>automating security workflows using Python and Bash</strong>, ensuring efficiency and precision in technical operations.</p>
+                  <p>I thrive on solving <strong>complex CTF challenges and conducting deep-dive threat analysis</strong>, with a constant focus on <strong>automation and proactive defense</strong>.</p>
+                  <p>My technical arsenal includes hands-on experience with industry-standard tools like <strong>Nmap, Burp Suite, Autopsy, and advanced OSINT research</strong> frameworks.</p>
+                  <p>I am passionate about <strong>leveraging my technical skill set to help organizations build resilient, proactive security postures</strong> and contributing to a safer digital ecosystem.</p>
                 </p>
                 <p style="color: var(--accent-primary); font-family: var(--font-mono);">>_ Investigating. Exploiting. Securing.</p>
             </div>
@@ -1032,6 +1034,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
