--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
             <div class="project-card-inner">
 
                 <div class="project-card-front">
-                    <img src="https://github.com/isayani-78/sayanimaity78/blob/main/assets/project1.png" alt="Forensic Analyzer" style="width:70px;height:70px;object-fit:contain;margin-bottom:10px;">
+                    <img src="https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/project1.png" alt="Forensic Analyzer" style="width:70px;height:70px;object-fit:contain;margin-bottom:10px;">
                     <h3 style="color:#fff;font-weight:bold;font-size:16px;margin-bottom:6px;">
                         Forensic Analyzer
                     </h3>
@@ -1034,6 +1034,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
