--- a/index.html
+++ b/index.html
@@ -539,12 +539,14 @@
 <div class="project-card" data-link="https://github.com/isayani-78/forensic-analyzer">
 
             <div class="project-card-inner">
-
-                <div class="project-card-front">
-                    <img src="https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/project1.png" alt="Forensic Analyzer" style="width:70px;height:70px;object-fit:contain;margin-bottom:10px;">
-                    <h3 style="color:#fff;font-weight:bold;font-size:16px;margin-bottom:6px;">
-                        Forensic Analyzer
-                    </h3>
+        <div class="project-card-front">
+            <img src="https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/project1.png" 
+                 alt="Forensic Analyzer" 
+                 style="width: 100%; height: 180px; object-fit: cover; border-radius: 8px 8px 0 0; margin-bottom: 15px;">
+            
+            <h3 style="color:#fff;font-weight:bold;font-size:16px;margin-bottom:6px;">
+                Forensic Analyzer
+            </h3>
                     <p style="font-size:13px;line-height:1.4;opacity:0.85;margin-bottom:10px;">
                         Web-based Digital Forensic Learning Tool implementing hashing and encoding techniques.
                     </p>
@@ -1034,6 +1036,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
