--- a/index.html
+++ b/index.html
@@ -573,14 +573,18 @@
 
        <!-- PROJECT 2 -->
 <div class="project-card" data-link="https://github.com/isayani-78/CMTL">
-
-            <div class="project-card-inner">
-
-                <div class="project-card-front">
-                    <img src="project2.png" alt="Cyber Security Multi-Tool" style="width:70px;height:70px;object-fit:contain;margin-bottom:10px;">
-                    <h3 style="color:#fff;font-weight:bold;font-size:16px;margin-bottom:6px;">
-                        Cyber Security Multi-Tool Launcher (CMTL).
-                    </h3>
+    <div class="project-card-inner">
+        <div class="project-card-front">
+            <img src="https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/project2.png" 
+                 alt="Cyber Security Multi-Tool Launcher" 
+                 style="width: 100%; height: 180px; object-fit: cover; border-radius: 8px 8px 0 0; margin-bottom: 15px;">
+            
+            <h3 style="color:#fff;font-weight:bold;font-size:16px;margin-bottom:6px;">
+                Cyber Security Multi-Tool Launcher (CMTL)
+            </h3>
+            </div>
+    </div>
+</div>
                     <p style="font-size:13px;line-height:1.4;opacity:0.85;margin-bottom:10px;">
                         GUI platform for VAPT, Pen Testing, and Network Scanning.
                     </p>
@@ -1036,6 +1040,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
