--- a/index.html
+++ b/index.html
@@ -371,6 +371,10 @@
             <div class="hero-avatar-ring"></div>
             <div class="hero-scan-line"></div>
             <img src="https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/sayanipfp%201.jpg" alt="Sayani Maity" class="hero-img">
+            </div>
+        <div class="card-back">
+            <img src="assets/Sayani ExamTranscript.jpg" alt="Exam Transcript">
+        </div>
         </div>
         <div class="hero-tag">STATUS: ONLINE // SCANNING FOR OPPORTUNITIES</div>
         <div class="glitch-wrapper">
@@ -919,6 +923,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
