--- a/index.html
+++ b/index.html
@@ -384,13 +384,19 @@
         </div>
     </header>
 
-    <section id="about" class="hidden">
-        <h2 class="section-title hyper-text">FILE: PROFILE</h2>
-        
-        <div class="cert-display-case">
-            <div class="cert-display-header">PRIMARY CREDENTIAL: CEH V13ai</div>
-            <img src="https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Sayani%20CEH-Certificate.jpg" alt="CEH Certificate" class="cert-display-img">
+    <div class="cert-display-case">
+    <div class="cert-display-header">PRIMARY CREDENTIAL: CEH V13ai (HOVER TO FLIP)</div>
+    <div class="cert-flipper">
+        <div class="cert-inner">
+            <div class="cert-front">
+                <img src="https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Sayani%20CEH-Certificate.jpg" alt="CEH Certificate" class="cert-display-img">
+            </div>
+            <div class="cert-back">
+                <img src="https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Sayani%20ExamTranscript.jpg" alt="Exam Transcript" class="cert-display-img">
+            </div>
         </div>
+    </div>
+</div>
 
         <div class="about-grid">
             <div class="about-text">
@@ -920,6 +926,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
